# bachelor_thesis

./: .gitignore  Cargo.toml  Dockerfile
src/: Dockerfile  create_tables.sql  dblp_sql.rs  duckdb.rs  duckdb_connector.rs  main.rs  parser.rs  postgres.rs  postgres_connector.rs  qlever_connector.rs  replacements.txt  testing.rs
src/data/: Qleverfile.dblp  create_tables_dblp.sql  dblp.tsv  osm-germany.tsv
thesis/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.glg  main.glo  main.gls  main.lol  main.lot  main.out  main.slg  main.slo  main.sls  main.tex  main.toc
thesis/cover/: titlepage.fdb_latexmk  titlepage.fls  titlepage.tex
thesis/sections/: abstract.aux  acknowledgements.aux  algorithms.aux  appendix.aux  conclusion.aux  cover.aux  declaration_english.aux  declaration_english.tex  discussion.aux  figures.aux  fundamentals.aux  glossary.aux  information.aux  information.tex  methodology.aux  motivation.aux  motivation.tex  quote.aux  references.aux  results.aux  symbols.aux  table_of_contents.aux  tables.aux  zusammenfassung.aux
