[package]
name = "bachelor_thesis"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.23", features = ["gzip", "tokio"] }
bollard = "0.19.0"
clap = { version = "4.5.38", features = ["cargo"] }
csv = "1.3.1"
duckdb = "1.2.2"
futures = "0.3.31"
postgres = "0.19.10"
quick-xml = "0.37.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "0.8.22"
